--- a/public/home.html
+++ b/public/home.html
@@ -14,11 +14,10 @@
         <h1 class="text-xl font-bold">Donasi</h1>
         <nav>
             <ul class="flex space-x-4">
-                <li><a href="#" class="hover:text-gray-300">Home</a></li>
-                <li><a href="#" class="hover:text-gray-300">About</a></li>
-                <li><a href="login.php" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-md">Login</a></li>
-                <li><a href="register.php" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-md">Register</a></li>
-            </ul>
+                <li><a href="#home" class="hover:text-gray-300">Home</a></li>
+                <li><a href="#about" class="hover:text-gray-300">About</a></li>
+                <li><a href="login.html" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-md mr-4">Login</a></li>
+                <li><a href="register.html" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-md mr-4">Register</a></li>
             </ul>
         </nav>
     </div>
@@ -28,7 +27,7 @@
     <div class="container mx-auto text-center">
         <h1 class="text-4xl font-bold uppercase mb-8">Satu langkah kecil, berdampak besar</h1>
         <p class="text-lg text-gray-600 mx-auto max-w-lg">Satu Langkah Kecil, Dampak Besar adalah sebuah inisiatif yang memperlihatkan bagaimana setiap tindakan kebaikan yang sederhana dapat memiliki dampak yang besar dalam kehidupan orang lain</p>
-        <a href="login.php" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded inline-block mt-16">Donasi Sekarang</a>
+        <a href="login.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded inline-block mt-16">Donasi Sekarang</a>
     </div>
 </section>
 
