new : frontend update

--- a/public/donasi1.html
+++ b/public/donasi1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Donasi</title>
+    <title>Web3donate</title>
     <link rel="shortcut icon" href="/public/img/logo.png" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
