--- a/public/signup.html
+++ b/public/signup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Donasi | Register</title>
+    <title>Web3donate | Sign up</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body class="bg-gray-50 dark:bg-gray-900 flex justify-center items-center h-screen">
@@ -12,11 +12,11 @@
         <div class="w-full lg:w-1/2 flex flex-col items-center justify-center p-12 bg-no-repeat bg-cover bg-center" style="background-image: url('img/logo.png');">
         </div>
         <div class="w-full lg:w-1/2 py-16 px-12">
-          <h2  class="text-3xl mb-4">Sign up</h2>
+          <h2  class="text-3xl mb-4">Sign Up</h2>
           <p class="mb-4">
             Create your account. It’s free and only take a minute
           </p>
-          <form action="register.php" method="post">
+          <form action="signup.php" method="post">
             <div class="mt-5">
               <input type="text" name="username" placeholder="Username" class="border border-gray-400 py-1 px-2 w-full">
             </div>
@@ -26,9 +26,9 @@
             <div class="mt-5">
               <input type="password" name="password" placeholder="Password" class="border border-gray-400 py-1 px-2 w-full">
             </div>
-            <a href="login.html">
+            <a href="signin.html">
             <div class="mt-5">
-              <button class="w-full bg-blue-500 py-3 text-center text-white">Register Now</button>
+              <button class="w-full bg-blue-500 py-3 text-center text-white">Sign Up</button>
             </a>
             </div>
           </form>
