--- a/public/signin.html
+++ b/public/signin.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Donasi | Login</title>
+    <title>Web3donate | Login</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -28,7 +28,7 @@
             </h1>
             <form
               class="space-y-4 md:space-y-6"
-              action="login.php"
+              action="signin.php"
               method="post"
             >
               <div>
@@ -42,7 +42,7 @@
                   name="email"
                   id="email"
                   class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                  placeholder="name@company.com"
+                  placeholder="yourname@kiminonawa.com"
                   required=""
                 />
               </div>
@@ -96,7 +96,7 @@
               <p class="text-sm font-light text-gray-500 dark:text-gray-400">
                 Don’t have an account yet?
                 <a
-                  href="register.html"
+                  href="signup.html"
                   class="font-medium text-primary-600 hover:underline dark:text-primary-500"
                   >Register</a
                 >
