update : fe-home

--- a/public/index.html
+++ b/public/index.html
@@ -4,23 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web3donate</title>
-    <link rel="shortcut icon" href="/public/img/logo.jpg" />
+    <link rel="shortcut icon" href="img/logo.png" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-
-  
-    <body class="bg-blue-500">
+    <body class="">
       <nav
         class="relative px-4 py-4 flex justify-between items-center bg-white"
       >
         <a class="text-3xl font-bold leading-none" href="#">
           <a class="mr-auto text-3xl font-bold leading-none" href="index.html">
-            <img
-              src="img/logo.png"
-              alt=""
-              class="w-14 h-14"
-            />
+            <img src="img/logo.png" alt="" class="w-14 h-14" />
           </a>
         </a>
         <div class="lg:hidden">
@@ -60,7 +54,10 @@
             </svg>
           </li>
           <li>
-            <a class="text-sm text-gray-400 hover:text-gray-500" href="https://app.uniswap.org/swap" target="_blank"
+            <a
+              class="text-sm text-gray-400 hover:text-gray-500"
+              href="https://app.uniswap.org/swap"
+              target="_blank"
               >Swap</a
             >
           </li>
@@ -82,7 +79,9 @@
           </li>
 
           <li>
-            <a class="text-sm text-gray-400 hover:text-gray-500" href="feedback.html"
+            <a
+              class="text-sm text-gray-400 hover:text-gray-500"
+              href="feedback.html"
               >Feedback</a
             >
           </li>
@@ -102,7 +101,7 @@
             <a class="mr-auto text-3xl font-bold leading-none" href="#">
               <img
                 src="img/logo.png"
-                alt="deskripsi_gambar"
+                alt=""
                 class="w-80 h-80"
               />
             </a>
@@ -135,7 +134,8 @@
               <li class="mb-1">
                 <a
                   class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded"
-                  href="https://app.uniswap.org/swap" target="_blank"
+                  href="https://app.uniswap.org/swap"
+                  target="_blank"
                   >Swap</a
                 >
               </li>
@@ -203,12 +203,5 @@
         }
       });
     </script>
-
-
-
-
-
-
-
   </body>
 </html>
