--- a/public/donasi1.html
+++ b/public/donasi1.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web3donate</title>
-    <link rel="shortcut icon" href="/public/img/logo.png" />
+    <link rel="shortcut icon" href="img/logo.png" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-
-
     
-
-
     <body class="bg-gray-200">
 
       <div class="min-w-screen min-h-screen bg-gray-900 flex items-center justify-center px-5 py-5">
