--- a/public/konfirmasi.html
+++ b/public/konfirmasi.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web3donate | confirmation</title>
-    <link rel="shortcut icon" href="/public/img/logo.jpg" />
+    <title>Web3donate | Confirmation</title>
+    <link rel="shortcut icon" href="img/logo.png" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
