--- a/public/signup.html
+++ b/public/signup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web3donate | Sign up</title>
+    <link rel="shortcut icon" href="img/logo.png" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body class="bg-gray-50 dark:bg-gray-900 flex justify-center items-center h-screen">
