--- a/public/worngps.html
+++ b/public/worngps.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web3donate | Login</title>
+    <title>Web3donate | Sign In</title>
+    <link rel="shortcut icon" href="img/logo.png" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
