--- a/public/tb_donate.html
+++ b/public/tb_donate.html
@@ -15,14 +15,15 @@
             <img src="img/logo.png" class="w-40 h-40 mx-auto" alt="">
             <h2 class="text-2xl font-semibold mb-4 text-center">Web3donate Dashboard</h2>
             <nav>
-                <a href="#" class="block py-2.5 px-4 rounded hover:bg-blue-700">Donate</a>
+                <a href="tb_donate.html" class="block py-2.5 px-4 rounded hover:bg-blue-700">Donate</a>
                 <a href="#" class="block py-2.5 px-4 rounded hover:bg-blue-700">Users</a>
-                <a href="#" class="block py-2.5 px-4 rounded hover:bg-blue-700">Settings</a>
+                <a href="#" class="block py-2.5 px-4 rounded hover:bg-blue-700">Crypto</a>
+                <a href="tb_feedback.php" class="block py-2.5 px-4 rounded hover:bg-blue-700">Feedback</a>
             </nav>
         </div>
         <!-- Main Content -->
-        <div class="flex-1 p-10">
-            <h1 class="text-3xl font-bold mb-10">Dashboard</h1>
+        <div class="flex-1 p-10">   
+            <h1 class="text-3xl font-bold mb-10">Donate</h1>
             <!-- Content goes here -->
             <div class="grid grid-cols-3 gap-6">
                 <div class="bg-white p-6 rounded-lg shadow-md">
