--- a/public/home.html
+++ b/public/home.html
@@ -230,7 +230,7 @@
         <h2
           class="mb-8 lg:mb-16 text-3xl font-extrabold tracking-tight leading-tight text-center text-gray-900 md:text-4xl"
         >
-          SUPPORTS 10+ CRYPTOCURRENCIES FOR DONATION
+          SUPPORTS 10+ CRYPTOCURRNCY FOR DONATION
         </h2>
         <div
           class="grid grid-cols-2 gap-8 text-gray-500 sm:gap-12 md:grid-cols-3 lg:grid-cols-6 dark:text-gray-400"
