--- a/public/feedback.html
+++ b/public/feedback.html
@@ -7,8 +7,8 @@
     <link rel="shortcut icon" href="img/logo.png" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
-    <section id="contact" class="bg-white dark:bg-gray-900">
+  <body class="bg-white dark:bg-gray-900 flex flex-col min-h-screen">
+    <section id="contact" class="bg-white dark:bg-gray-900 flex-grow">
       <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
         <h2
           class="mb-4 text-4xl tracking-tight font-extrabold text-center text-gray-900 dark:text-white"
@@ -22,21 +22,6 @@
           Need details about our Business plan? Let us know.
         </p>
         <form action="feedback.php" method="post" class="space-y-8">
-          <div>
-            <label
-              for="email"
-              class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300"
-              >Your email</label
-            >
-            <input
-              type="email"
-              id="email"
-              name="email"
-              class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light"
-              placeholder="Web3donate@gmail.com"
-              required
-            />
-          </div>
           <div>
             <label
               for="subject"
