--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Web3donate</title>
     <link rel="shortcut icon" href="img/logo.png" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://unpkg.com/flowbite@1.4.7/dist/flowbite.js"></script>
   </head>
   <body>
     <body class="">
@@ -86,6 +87,30 @@
             >
           </li>
         </ul>
+        <div>
+          <img id="avatarButton" type="button" data-dropdown-toggle="userDropdown" data-dropdown-placement="bottom-start" class="w-10 h-10 rounded-full cursor-pointer" src="https://images.gameinfo.io/pokemon/256/p94f466.webp" alt="User dropdown">
+      
+          <!-- Dropdown menu -->
+          <div id="userDropdown" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44">
+              <div class="px-4 py-3 text-sm text-gray-900">
+                  <div>Bonnie Green</div>
+                  <div class="font-medium truncate">name@flowbite.com</div>
+              </div>
+              <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="avatarButton">
+                  <li>
+                      <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Donation History</a>
+                  </li>
+                  <li>
+                      <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Feedback History</a>
+                  </li>
+              </ul>
+          </div>
+      </div>
+
+
+      
+
+        </div>
         <a
           class="hidden lg:inline-block py-2 px-6 bg-blue-500 hover:bg-blue-600 text-sm text-white font-bold rounded-xl transition duration-200"
           href="home.html"
