--- a/public/wrongps.html
+++ b/public/wrongps.html
@@ -83,7 +83,7 @@
                 </div>
                 <a
                   href="#"
-                  class="text-sm font-medium text-blue-600 hover:text-blue-700 hover:underline dark:text-blue-500"
+                  class=" invisible text-sm font-medium text-blue-600 hover:text-blue-700 hover:underline dark:text-blue-500"
                   >Forgot password?</a
                 >
               </div>
